Add Functions Lowercase

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -211,6 +211,21 @@
                 </div>
               </div>
             </div>
+
+            <div id="functions-lowercase" class="setting normal switch">
+              <div class="setting-title">
+                <div class="setting-icon"></div>
+                <div class="setting-name">Functions Lowercase</div>
+              </div>
+              <div id="functions-lowercase-switch" class="setting-switch">
+                <div class="toggle-switch">
+                  <div class="toggle-switch-text-off">OFF</div>
+                  <div class="glow-comp"></div>
+                  <div class="toggle-switch-button"></div>
+                  <div class="toggle-switch-text-on">ON</div>
+                </div>
+              </div>
+            </div>
           </div>
 
           <div id="close-button" class="setting normal dropdown">
