Set Default Switches Positions

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -242,6 +242,21 @@
         </div>
 
         <div id="code-beautifier" class="settings-group">
+          <div id="end-with-new-line" class="setting normal switch">
+            <div class="setting-title">
+              <div class="setting-icon"></div>
+              <div class="setting-name">End With New Line</div>
+            </div>
+            <div id="end-with-new-line-switch" class="setting-switch">
+              <div class="toggle-switch toggle-on">
+                <div class="toggle-switch-text-off">OFF</div>
+                <div class="glow-comp"></div>
+                <div class="toggle-switch-button"></div>
+                <div class="toggle-switch-text-on">ON</div>
+              </div>
+            </div>
+          </div>
+
           <div id="space-if-statements" class="setting normal switch">
             <div class="setting-title">
               <div class="setting-icon"></div>
@@ -263,7 +278,7 @@
               <div class="setting-name">Shift Brackets</div>
             </div>
             <div id="shift-brackets-switch" class="setting-switch">
-              <div class="toggle-switch toggle-on">
+              <div class="toggle-switch">
                 <div class="toggle-switch-text-off">OFF</div>
                 <div class="glow-comp"></div>
                 <div class="toggle-switch-button"></div>
@@ -278,22 +293,7 @@
               <div class="setting-name">Compact Conditions</div>
             </div>
             <div id="compact-conditions-switch" class="setting-switch">
-              <div class="toggle-switch toggle-on">
-                <div class="toggle-switch-text-off">OFF</div>
-                <div class="glow-comp"></div>
-                <div class="toggle-switch-button"></div>
-                <div class="toggle-switch-text-on">ON</div>
-              </div>
-            </div>
-          </div>
-
-          <div id="end-with-new-line" class="setting normal switch">
-            <div class="setting-title">
-              <div class="setting-icon"></div>
-              <div class="setting-name">End With New Line</div>
-            </div>
-            <div id="end-with-new-line-switch" class="setting-switch">
-              <div class="toggle-switch toggle-on">
+              <div class="toggle-switch">
                 <div class="toggle-switch-text-off">OFF</div>
                 <div class="glow-comp"></div>
                 <div class="toggle-switch-button"></div>
@@ -312,7 +312,7 @@
               <option value="All">Left</option>
             </select>
             <div id="divide-comments-switch" class="setting-switch">
-              <div class="toggle-switch toggle-on">
+              <div class="toggle-switch">
                 <div class="toggle-switch-text-off">OFF</div>
                 <div class="glow-comp"></div>
                 <div class="toggle-switch-button"></div>
