Fix Devide Comments Switch Dropdown Optins

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -308,8 +308,8 @@
               <div class="setting-name">Divide Comments</div>
             </label>
             <select id="divide-comments-select" name="divide-comments-select" class="setting-dropdown">
-              <option value="Messages" selected>Right</option>
-              <option value="All">Left</option>
+              <option value="Remarks" selected>Remarks</option>
+              <option value="All">All</option>
             </select>
             <div id="divide-comments-switch" class="setting-switch">
               <div class="toggle-switch">
