Add Disable DarkReader Setting Applying

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -327,7 +327,7 @@
             </div>
           </div>
 
-          <div id="divide-comments" class="setting auto middle message">
+          <div id="code-beautifier-message" class="setting auto middle message">
             <div class="setting-message">Reopening Functions Editor required for changes to take effect</div>
           </div>
         </div>
