Add Auto Availiable Font Settings Determitation

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -64,7 +64,8 @@
                 <div class="setting-separator">:</div>
               </label>
               <select id="font-family-select" class="setting-dropdown" data-key="--code-font-family">
-                <option value="JetBrains Mono NL, JetBrains Mono" selected>JetBrains Mono</option>
+                <option value="JetBrains Mono NL,JetBrains Mono" selected>JetBrains Mono</option>
+                <option value="Source Code Pro">Source Code Pro</option>
                 <option value="Monaco">Zoho Default (Monaco)</option>
               </select>
             </div>
@@ -112,16 +113,7 @@
                   <div class="setting-name">Weight</div>
                   <div class="setting-separator">:</div>
                 </label>
-                <select id="font-weight-select" class="setting-dropdown" data-key="--code-font-weight">
-                  <option value="100">100</option>
-                  <option value="200">200</option>
-                  <option value="300">300</option>
-                  <option value="400" selected>400</option>
-                  <option value="500">500</option>
-                  <option value="600">600</option>
-                  <option value="700">700</option>
-                  <option value="800">800</option>
-                </select>
+                <select id="font-weight-select" class="setting-dropdown" data-key="--code-font-weight"></select>
               </div>
             </div>
 
@@ -314,8 +306,8 @@
               <div class="setting-name">Divide Comments</div>
             </label>
             <select id="divide-comments-select" class="setting-dropdown" data-key="divide-comments-select">
-              <option value="Remarks" selected>Remarks</option>
-              <option value="All">All</option>
+              <option value="All" selected>All</option>
+              <option value="Remarks">Remarks</option>
             </select>
             <div id="divide-comments-switch" class="setting-switch" data-key="divide-comments-switch">
               <div class="toggle-switch">
