Add More Theme Settings
Add better buttons colors, fonts, editor colors

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -141,7 +141,7 @@
               <select
                 id="font-feature-settings-select"
                 class="setting-dropdown"
-                data-key="--code-font-feature-settings"
+                data-key="--font-feature-settings"
               >
                 <option value="'calt', 'zero'" selected>Regular</option>
                 <option value="'calt', 'zero', 'ss01'">Neutral</option>
