Fix Default Font Weight

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -64,7 +64,7 @@
               <select id="font-family-select" class="setting-dropdown" data-key="--code-font-family">
                 <option value="JetBrains Mono NL,JetBrains Mono" selected>JetBrains Mono</option>
                 <option value="Source Code Pro">Source Code Pro</option>
-                <option value="Monaco">Zoho Default (Monaco)</option>
+                <option value="Monaco">Monaco (Zoho Default)</option>
               </select>
             </div>
 
