Add Consolas Font

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -65,6 +65,7 @@
                 <option value="JetBrains Mono NL,JetBrains Mono" selected>JetBrains Mono</option>
                 <option value="Source Code Pro">Source Code Pro</option>
                 <option value="Monaco">Monaco (Zoho Default)</option>
+                <option value="Consolas">Consolas</option>
               </select>
             </div>
 
