--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -62,10 +62,22 @@
                 <div class="setting-separator">:</div>
               </label>
               <select id="font-family-select" class="setting-dropdown" data-key="--code-font-family">
-                <option value="JetBrains Mono NL,JetBrains Mono" selected>JetBrains Mono</option>
-                <option value="Source Code Pro">Source Code Pro</option>
-                <option value="Monaco">Monaco (Zoho Default)</option>
+                <option value="JetBrains Mono NL,JetBrains Mono">JetBrains Mono</option>
+                <option value="Source Code Pro">SourceCodePro</option>
+                <option value="Menlo">Menlo</option>
+                <option value="Anonymous Pro">Anonymous Pro</option>
+                <option value="DejaVu Sans Mono">DejaVu Sans Mono</option>
+                <option value="Vera Sans Mono">Vera Sans Mono</option>
+                <option value="Ubuntu Mono">Ubuntu Mono</option>
                 <option value="Consolas">Consolas</option>
+                <option value="Monaco">Monaco (Zoho Default)</option>
+                <option value="Courier New">Courier New</option>
+                <option value="Terminus">Terminus</option>
+                <option value="Roboto Mono">Roboto Mono</option>
+                <option value="Droid Sans Mono">Droid Sans Mono</option>
+                <option value="Andale Mono">Andale Mono</option>
+                <option value="Lucida Console">Lucida Console</option>
+                <option value="Fixedsys">Fixedsys</option>
               </select>
             </div>
 
@@ -139,11 +151,7 @@
                 <div class="setting-name">Ligatures</div>
                 <div class="setting-separator">:</div>
               </label>
-              <select
-                id="font-feature-settings-select"
-                class="setting-dropdown"
-                data-key="--font-feature-settings"
-              >
+              <select id="font-feature-settings-select" class="setting-dropdown" data-key="--font-feature-settings">
                 <option value="'calt', 'zero'" selected>Regular</option>
                 <option value="'calt', 'zero', 'ss01'">Neutral</option>
                 <option value="'calt', 'zero', 'ss02', 'cv03', 'cv04', 'cv16', 'cv18'">Dynamic</option>
