Add Extension Popup Footer Buttons

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -337,6 +337,19 @@
           </div>
         </div>
       </div>
+      <div id="footer">
+        <div id="footer-buttons">
+          <div class="buttons-container vertical-buttons-container">
+            <div class="buttons-container horizontal-buttons-container">
+              <button id="request-feature-button" class="normal-button footer-button" role="button">Request Feature</button>
+              <button id="report-bug-button" class="normal-button footer-button" role="button">Report Bug</button>
+            </div>
+            <button id="donate-button" class="emphasized-button footer-button" role="button">
+              <span>Donate</span>
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
