Move Footer Buttons to Single Row

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -204,12 +204,14 @@
         <div id="footer-buttons">
           <div class="buttons-container vertical-buttons-container">
             <div class="buttons-container horizontal-buttons-container">
-              <button id="request-feature-button" class="normal-button footer-button" role="button">Request Feature</button>
-              <button id="report-bug-button" class="normal-button footer-button" role="button">Report Bug</button>
-            </div>
+              <button id="request-feature-button" class="normal-button footer-button" role="button">
+                Request Feature
+              </button>
             <button id="donate-button" class="emphasized-button footer-button" role="button">
               <span>Donate</span>
             </button>
+              <button id="report-bug-button" class="normal-button footer-button" role="button">Report Bug</button>
+            </div>
           </div>
         </div>
       </div>
